--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -21,10 +21,20 @@ aws:
     numberOfMessages: 5
     waitTimeMessage: 10
     visibilityTimeOut: 30
-    veiculosUpdate:
-      queue: veiculos_update_queue
+    documentosEmitir:
+      queue: documentos_emitir_queue
       delay: 1000
       poolSize: 1
+
+detran:
+  webhook: ${WEBHOOK_URL:http://hackathon-detran-mock:8080/v1/documentos/detran/receive}
+  client:
+    connectionTimeout: 50000
+    responseTimeout: 50000
+    readTimeout: 50000
+    writeTimeout: 50000
+    maxConnections: 5
+    url: ${PAYMENT_URL:http://fastfood-payment-mock:8084}
 
 management:
   health:
