--- a/chart/documentos/templates/service.yaml
+++ b/chart/documentos/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "pessoas.fullname" . }}
+  name: {{ include "documentos.fullname" . }}
   labels:
-    {{- include "pessoas.labels" . | nindent 4 }}
+    {{- include "documentos.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -12,4 +12,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include "pessoas.selectorLabels" . | nindent 4 }}
+    {{- include "documentos.selectorLabels" . | nindent 4 }}
