--- a/chart/documentos/templates/serviceaccount.yaml
+++ b/chart/documentos/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "pessoas.serviceAccountName" . }}
+  name: {{ include "documentos.serviceAccountName" . }}
   labels:
-    {{- include "pessoas.labels" . | nindent 4 }}
+    {{- include "documentos.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
