--- a/chart/documentos/templates/tests/test-connection.yaml
+++ b/chart/documentos/templates/tests/test-connection.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: "{{ include "pessoas.fullname" . }}-test-connection"
+  name: "{{ include "documentos.fullname" . }}-test-connection"
   labels:
-    {{- include "pessoas.labels" . | nindent 4 }}
+    {{- include "documentos.labels" . | nindent 4 }}
   annotations:
     "helm.sh/hook": test
 spec:
@@ -11,5 +11,5 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      args: ['{{ include "pessoas.fullname" . }}:{{ .Values.service.port }}']
+      args: ['{{ include "documentos.fullname" . }}:{{ .Values.service.port }}']
   restartPolicy: Never
