--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -66,12 +66,13 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - name: Building Image
-        uses: docker/build-push-action@v4
+        uses: docker/build-push-action@v6
         with:
           context: .
           file: Multistage.Multistage.Dockerfile
           load: false
           push: true
+          tags: icarodamiani/fiap-hackathon-documentos:latest
 
       - name: Install Helm
         uses: azure/setup-helm@v4
