--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -69,7 +69,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: .
-          file: Multistage.Multistage.Dockerfile
+          file: Multistage.Dockerfile
           load: false
           push: true
           tags: icarodamiani/fiap-hackathon-documentos:latest
