--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -3,6 +3,11 @@ run-name: Deploy Market ${{ github.event.inputs.market }} Environment ${{ github
 
 on:
   workflow_dispatch:
+    inputs:
+      oidc_provider_issuer:
+        type: string
+        required: true
+        description: 'Oidc provider issuer uri:'
 
 env:
   REGION: "us-east-1"
@@ -95,5 +100,5 @@ jobs:
           config-files: chart/documentos/values.yaml
           chart-path: chart/documentos/
           namespace: dev
-          values: key1=value1,key2=value2
+          values: env[0].value=${{ inputs.authentication_provider }}
           name: documentos
