--- a/chart/documentos/templates/deployment.yaml
+++ b/chart/documentos/templates/deployment.yaml
@@ -36,6 +36,9 @@ spec:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          env:
+            {{ - include "documentos.list-envvars" . | indent 12 }}
+            {{ - include "documentos.list-secrets" . | indent 12 }}
           ports:
             - name: http
               containerPort: {{ .Values.service.port }}
