--- a/chart/documentos/values.yaml
+++ b/chart/documentos/values.yaml
@@ -47,3 +47,13 @@ serviceAccount:
   # The name of the service account to use.
   # If not set and create is true, a name is generated using the fullname template
   name: ""
+
+env:
+  - name: OIDC_PROVIDER_ISSUER
+    value: https://issuer
+  - name: AWS_REGION
+    value: us-east-1
+  - name: DETRAN_WEBHOOK_URL
+    value: http://documentos:8080/v1/documentos/detran/receive
+  - name: DETRAN_URL
+    value: http://detran-mock:8080
