--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,19 +5,14 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-          issuer-uri: http://keycloak.local:7777/auth/realms/vodafone
+          issuer-uri: ${OIDC_PROVIDER_ISSUER:http://localhost:7777/auth/realms/vodafone}
   jackson:
     serialization:
       FAIL_ON_EMPTY_BEANS: false
 
 aws:
-  accessKeyId: local
-  secretAccessKey: local
-  region: us-west-2
-  dynamo:
-    uri: http://localhost:8000
+  region: ${AWS_REGION:us-east-1}
   sqs:
-    uri: http://localhost:9324
     numberOfMessages: 5
     waitTimeMessage: 10
     visibilityTimeOut: 30
@@ -27,14 +22,14 @@ aws:
       poolSize: 1
 
 detran:
-  webhook: ${WEBHOOK_URL:http://hackathon-detran-mock:8080/v1/documentos/detran/receive}
+  webhook: ${DETRAN_WEBHOOK_URL:http://documentos:8080/v1/documentos/detran/receive}
   client:
     connectionTimeout: 50000
     responseTimeout: 50000
     readTimeout: 50000
     writeTimeout: 50000
     maxConnections: 5
-    url: ${PAYMENT_URL:http://fastfood-payment-mock:8084}
+    url: ${DETRAN_URL:http://detran-mock:8080}
 
 management:
   health:
