--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -2,6 +2,6 @@ aws:
   accessKeyId: local
   secretAccessKey: local
   dynamo:
-    uri: http://localhost:8000
+    uri: http://dockerhost:8000
   sqs:
-    uri: http://localhost:9324
+    uri: http://dockerhost:9324
